<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.routine.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.routine.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.routine.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />
</navigation> 